finished weather app

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
@@ -24,7 +25,7 @@
     </head>
     <body class="font-mono">
         <!-- header start -->
-    <header class="font-mono flex bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500  place-content-center">
+    <header class="font-mono flex bg-gradient-to-r from-purple-500 via-yellow-500 to-pink-500  place-content-center">
         <h1 class="text-4xl">Weather</h1>
         
     </header>
@@ -42,7 +43,7 @@
         <button
             type="submit"
             id="search-btn"
-            class="bg-gradient-to-r from-indigo-500 via-indigo-500 to-indigo-500  rounded-md hover:text-white"
+            class="bg-gradient-to-r from-pink-500 via-pink-500 to-pink-500  rounded-md hover:text-white"
         >
             Search
         </button>
@@ -50,9 +51,9 @@
         <!-- search form end -->
 
         <!-- current weather start -->
-        <div id="current-container">
-        <h1 class="font-medium m-auto w-3/5 text-center text-black rounded-xl leading-tight text-5xl mt-8 mb-2 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500  border-2 border-white">Current</h1>
-        <div id="current-stats-container" class="text-center m-auto mt-8 md:w-4/12 ">
+        <div id="current-container ">
+        <h1 class="font-medium m-auto w-3/5 text-center text-black rounded-xl leading-tight text-5xl mt-8 mb-2 bg-gradient-to-r from-purple-500 via-yellow-500 to-pink-500 border-2 border-white">Current</h1>
+        <div id="current-stats-container" class="text-center m-auto mt-8 md:w-4/12 bg-gradient-to-l from-yellow-500 to-yellow-500">
             <img id="current-icon" class="m-auto" src="">
             <p id="temp"></p>
             <p id="feels-like"></p>
@@ -62,12 +63,13 @@
         </div>
         </div>
         <!-- current weather end -->
+
         <!-- five day forecast start -->
     <div id="five-day-container">
-        <h1 class="font-medium m-auto w-9/12 text-center text-black rounded-xl leading-tight text-5xl mt-8 mb-2 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 border-2 border-white">Five Day Forecast</h1>
+        <h1 class="font-medium m-auto w-9/12 text-center text-black rounded-xl leading-tight text-5xl mt-8 mb-2 bg-gradient-to-r from-purple-500 via-yellow-500 to-pink-500 border-2 border-white">Five Day Forecast</h1>
             <div class="pt-8">
-            <div class="flex flex-col w-screen md:flex-row md:w-screen md:h-full justify-around">
-                <div class="w-full pb-2 md:w-1/6 text-center" id="day-1">
+            <div class="flex flex-col w-screen md:flex-row md:w-screen md:h-full justify-around ">
+                <div class="w-full pb-2 md:w-1/6 text-center bg-gradient-to-l from-yellow-500 to-yellow-500" id="day-1">
                     <h2 id="day-1-date"></h2>
                     <img class="m-auto" id="day-1-icon" src="">
                     <p id="day-1-high"></p>
@@ -75,7 +77,7 @@
                     <p id="day-1-wind"></p>
                     <p id="day-1-humidity"></p>
             </div>
-            <div class="w-full md:w-1/6 text-center" id="day-2">
+            <div class="w-full md:w-1/6 text-center bg-gradient-to-l from-yellow-500 to-yellow-500" id="day-2">
                 <h2 id="day-2-date"></h2>
                 <img class="m-auto" id="day-2-icon" src="">
                     <p id="day-2-high"></p>
@@ -83,7 +85,7 @@
                     <p id="day-2-wind"></p>
                     <p id="day-2-humidity"></p>
             </div>
-            <div class="w-full md:w-1/6 text-center" id="day-3">
+            <div class="w-full md:w-1/6 text-center bg-gradient-to-l from-yellow-500 to-yellow-500" id="day-3">
                 <h2 id="day-3-date"></h2>
                 <img class="m-auto" id="day-3-icon" src="">
                     <p id="day-3-high"></p>
@@ -91,7 +93,7 @@
                     <p id="day-3-wind"></p>
                     <p id="day-3-humidity"></p>
             </div>
-            <div class="w-full md:w-1/6 text-center"id="day-4">
+            <div class="w-full md:w-1/6 text-center bg-gradient-to-l from-yellow-500 to-yellow-500"id="day-4">
                 <h2 id="day-4-date"></h2>
                 <img class="m-auto" id="day-4-icon" src="">
                     <p id="day-4-high"></p>
@@ -99,7 +101,7 @@
                     <p id="day-4-wind"></p>
                     <p id="day-4-humidity"></p>
             </div>
-            <div class="w-full md:w-1/6 text-center" id="day-5">
+            <div class="w-full md:w-1/6 text-center bg-gradient-to-l from-yellow-500 to-yellow-500" id="day-5">
                 <h2 id="day-5-date"></h2>
                 <img class="m-auto" id="day-5-icon" src="">
                     <p id="day-5-high"></p>
@@ -122,6 +124,6 @@
     </div>
     <!-- modal end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/weather.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html> 
